<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FormCadastro">

    <ImageView
        android:id="@+id/icon_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nome"
        app:srcCompat="@drawable/ic_nome_pessoa" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/nome"
        app:layout_constraintStart_toEndOf="@id/icon_nome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpf"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/cpf"
        app:layout_constraintStart_toStartOf="@+id/nome"
        app:layout_constraintTop_toBottomOf="@id/nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpf_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_data_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/data_nascimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/data_nascimento"
        app:srcCompat="@drawable/ic_data_nascimento" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/data_nascimento"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/data_de_nascimento"
        app:layout_constraintStart_toStartOf="@+id/cpf"
        app:layout_constraintTop_toBottomOf="@id/cpf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/data_nascimento_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/dados_endereco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dados_endereco"
        app:srcCompat="@drawable/ic_endereco" />

    <TextView
        android:id="@+id/dados_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="Digite o CEP e pressione ENTER"
        app:layout_constraintStart_toStartOf="@+id/data_nascimento"
        app:layout_constraintTop_toBottomOf="@id/data_nascimento" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cep"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/cep"
        app:layout_constraintStart_toStartOf="@+id/dados_endereco"
        app:layout_constraintTop_toBottomOf="@id/dados_endereco">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cep_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/rua"
        app:layout_constraintStart_toStartOf="@+id/cep"
        app:layout_constraintTop_toBottomOf="@id/cep"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rua_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/bairro"
        app:layout_constraintStart_toStartOf="@+id/rua"
        app:layout_constraintTop_toBottomOf="@id/rua"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bairro_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cidade"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/cidade"
        app:layout_constraintStart_toStartOf="@+id/bairro"
        app:layout_constraintTop_toBottomOf="@id/bairro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cidade_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estado"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/estado"
        app:layout_constraintStart_toStartOf="@+id/cidade"
        app:layout_constraintTop_toBottomOf="@id/cidade">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estado_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/estado"
        app:layout_constraintTop_toBottomOf="@id/estado" />


</androidx.constraintlayout.widget.ConstraintLayout>